2015-10-29  Mark Hatle <mark.hatle@windriver.com>
	* prelink.h: Define SHT_MIPS_ABIFLAGS if not set
	* prelink.c: OK to skip SHT_MIPS_ABIFLAGS
	  optimize the loop to stop on the first bad entry
	  adjust the error to give us more info on the bad section

2015-10-28   Mark Hatle <mark.hatle@windriver.com>
	* get.c: Sync rtld/prelink type_class values

2015-10-22   Mark Hatle <mark.hatle@windriver.com>
	* Upstream project appears to have been abandoned
	* Update the project to remove the SVN like 'trunk' dir
	* Adjust the AUTHORS file
	* Move the README.cross to replace README and update it
	* Move the previous ChangeLog to ChangeLog.1
	* Move the current ChangeLog.cross to ChangeLog

2015-10-21   Mark Hatle <mark.hatle@windriver.com>
	* Resync src/rtld to glibc-2.22
	* src/elf.h, src/rtld/*:
	  Update elf.h to glibc 2.22 version
	* get.c, prelink.h: Add symname to conflict structure
	* conflict.c: Provide more debuggign on a conflict (symname)

2015-09-11   Mark Hatle <mark.hatle@windriver.com>
	* doc/prelink.8: Add --ld-preload docs
	* testsuite/Maekfile.am, testsuite/preload1*: Add test

2015-09-11   Vaneet Narang <v.narang@samsung.com>
	* src/gather.c, src/get.c, src/main.c, src/prelink.h:
	Add ability to specify preloaded libraries that influence the
	prelinker.

2015-09-09   Akhilesh Kumar <akhilesh.k@samsung.com>
	* src/gather.c: Remove unnecessary dso NULL check

2015-09-09   Maninder Singh <maninder1.s@samsung.com>
	* src/doit.c, src/gather.c, src/undoall.c: Fix realloc memory leak

2015-09-07  Andrew Stubbs  <ams@codesourcery.com>
	* src/arch-arm.c (PL_ARCH(arm)): Set max_page_size to match
	the new BFD default.

2015-04-06  Mark Hatle <mark.hatle@windriver.com>
	    Maninder Singh <maninder1.s@samsung.com>
	* src/rtld/dl-version.c: Add debug for mising ld-linux or libc
	* src/gather.c: Return rtld error messages on failure

2015-03-31  Mark Hatle <mark.hatle@windriver.com>
        * Based on submission by Maninder Singh <maninder1.s@samsung.com>